# akari

./: .gitignore  Cargo.toml  LICENSE.txt  QUICK_TUTORIAL.md  README.md  STYLE.md  readme.md
akari/: Cargo.toml  README.md  data.json  readme.md
akari/src/: compile.rs  extensions.rs  hash.rs  lib.rs  main.rs  object.rs  parse.rs  template.rs  template_manager.rs  test.rs
akari/src/object/: error.rs  iter.rs  macro.rs  node.rs  operations.rs  parse.rs  test.rs  value.rs
akari/src/object/parser/: error.rs  inner.rs  json.rs  mod.rs  stack.rs  trait_def.rs
akari/src/object/serializer/: error.rs  json.rs  mod.rs  trait_def.rs  writer.rs
akari/src/object/value/: float.rs
akari/src/template/: block_utils.rs  compile.rs  parse.rs  template_manager.rs  templates.rs  test.rs
akari/temp_templates/: home.html
am/: Cargo.toml
am/src/: lib.rs  test.rs
src/: compile.rs  lib.rs  object.rs  parse.rs  template_manager.rs  templates.rs  test.rs
