[package]
name = "akari"
version = "0.2.3"
edition = "2024" 
authors = ["Redstone <redstone@fds.moe>"] 
description = "Template rendering language" 
repository = "https://github.com/Field-of-Dreams-Studio/akari" 
homepage = "https://fds.rs/akari/" 
license = "GPL-3.0-or-later" 
categories = ["network-programming", "web-programming::http-server" ] 
keywords = ["template-rendering", "frontend"]  

[dependencies] 
akari_macro = { version="0.2.0", path="../am" } 
