[package]
name = "akari"
version = "0.2.8"
edition = "2024" 
authors = ["Redstone <redstone@fds.moe>"] 
description = "Dynamic & Weakly Typed Programming Powered by Rust" 
repository = "https://github.com/Field-of-Dreams-Studio/akari" 
homepage = "https://fds.rs/akari/" 
license = "GPL-3.0-or-later" 
categories = ["data-structures", "parser-implementations", "template-engine", "encoding", "web-programming"]
keywords = ["json", "parser", "template", "dynamic", "streaming"]  

[features]
default = ["dynamic"]

# Flavor flag: triggers `#![no_std]` and pulls `hashbrown` so the `hash`
# module can source `HashMap` from it. Does not enable any other feature.
no_std = ["dep:hashbrown"]

# Capabilities
hash = []
dynamic = ["hash"]
object_macro = ["dep:akari_macro", "dynamic"]
extension = ["hash"]
template = ["dynamic"]

# Bundles
bin = ["dynamic", "template"]
full = ["dynamic", "object_macro", "extension", "template"]

[[bin]] 
name = "akari" 
required-features = ["bin"]  

[dependencies]
akari_macro = { version = "=0.3.0", path = "../am", optional = true }
hashbrown = { version = "0.15", default-features = false, optional = true }
